@@ -1,4 +1,6 @@
 xx yyy 2009: 0.6.6 Miek <miek@miek.nl>
+  * fix to minor bug in rdup-simple which prevented local
+    backups from working. (Tom Hendrikx)
 
 
 10 Jan 2009: 0.6.5 Miek <miek@miek.nl>
